--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URI = mongodb+srv://madhusha:madhusha123@lifecare-medicalcenter.439mj.mongodb.net/lifecare_db?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://madhusha:madhusha123@lifecare-medicalcenter.439mj.mongodb.net/BrightPath?retryWrites=true&w=majority
+JWTPRIVATETKEY=Hello1234
+SALT=10
